树形视图 修改

--- a/Pro.Web/Views/Student/TreeIndex.cshtml
+++ b/Pro.Web/Views/Student/TreeIndex.cshtml
@@ -9,7 +9,7 @@
     .node_name {
         font-size: 13px;
         font-family: "宋体";
-        color: black;
+        color: #359ac1;
     }
 </style>
 
@@ -23,7 +23,7 @@
         <input type="text" class="form-control" id="txtName" style="width:180px;float:left;" />
         <button id="btnSearch" class="btn btn-primary" onclick="Searchs()">搜索</button>
     </div>
-    <ul id="user_tree" class="ztree" style="border: 1px solid #617775;overflow-y: scroll;height: 250px;width:160px;"></ul>
+    <ul id="user_tree" class="ztree" style="border: 1px solid #617775;overflow-y: scroll;height: 250px;width:260px;"></ul>
 </div>
 
 @*</div>*@
