--- a/Pro.Web/Views/Student/BootTable.cshtml
+++ b/Pro.Web/Views/Student/BootTable.cshtml
@@ -83,7 +83,7 @@
                     sidePagination: "server",           //分页方式：client客户端分页，server服务端分页（*）
                     pageNumber: 1,                      //初始化加载第一页，默认第一页
                     pageSize: 10,                       //每页的记录行数（*）
-                    //pageList: [10, 25, 50, 100],      //可供选择的每页的行数（*）
+                    pageList: [10, 25, 50, 100],      //可供选择的每页的行数（*）
                     search: true,                       //是否显示表格搜索，此搜索是客户端搜索，不会进服务端，所以，个人感觉意义不大
                     strictSearch: true,
                     showColumns: true,                  //是否显示所有的列
@@ -96,25 +96,39 @@
                     showToggle: true,                   //是否显示详细视图和列表视图的切换按钮
                     cardView: false,                    //是否显示详细视图
                     detailView: false,                  //是否显示父子表
-
+                    buttonsAlign: 'right',               //搜索框 刷新 视图切换工具栏位置
                     showPaginationSwitch: true,         //是否显示切换分页按钮
-
+                    detailView: true,                   //展开详情
+                    detailFormatter(index, row) {
+                        var d = '';
+                        //d += "姓名：" + row.s_name;
+                        //d += "<br /><br />登录名：" + row.s_loginName
+                        d += "<p>姓名：" + row.s_name + "</p>";
+                        d += "<p>登录名：" + row.s_loginName + "</p>";
+                        d += "<p>地址：" + row.s_address + "</p>";
+                        d += "<p>年纪：" + row.s_age + "</p>";
+                        return d;
+                    },
                     columns: [{
                         checkbox: true
                     }, {
                         field: 's_name',
-                        title: '姓名'
+                        title: '姓名',
+                        titleTooltip: '姓名'
                     }, {
                         field: 's_loginName',
                         title: '登录名',
+                        titleTooltip: '登录名',
                         sortable: true
                     }, {
                         field: 's_address',
                         title: '地址',
+                        titleTooltip: '地址',
                         sortable: true
                     }, {
                         field: 's_status',
                         title: '状态',
+                        titleTooltip: '状态',
                         sortable: true,
                         formatter: function (value, rows, index) {
                             if (value == "1") {
@@ -126,6 +140,7 @@
                     }, {
                         field: 'operate',
                         title: '操作',
+                        switchable: false,
                         formatter: function (value, rows, index) //自定义方法，添加操作按钮
                         {
                             var d = '';
@@ -166,6 +181,7 @@
 
 
             oTableInit.InitSubTable = function (index, row, $detail) {
+
             }
 
             return oTableInit;
