ztree样式  和 js文件应用

--- a/Pro.Web/Views/Shared/_Layout.cshtml
+++ b/Pro.Web/Views/Shared/_Layout.cshtml
@@ -52,13 +52,13 @@
     <script src="~/Scripts/js/hhl.js"></script>
 
     <!--ztree style 插件-->
-    @*<link href="~/Scripts/ztree/css/demo.css" rel="stylesheet" />
-        <link href="~/Scripts/ztree/css/zTreeStyle/zTreeStyle.css" rel="stylesheet" />
+    <link href="~/Scripts/ztree/css/demo.css" rel="stylesheet" />
+    <link href="~/Scripts/ztree/css/zTreeStyle/zTreeStyle.css" rel="stylesheet" />
 
 
-        <script src="~/Scripts/ztree/js/jquery.ztree.core.js"></script>
-        <script src="~/Scripts/ztree/js/jquery.ztree.exedit.js"></script>
-        <script src="~/Scripts/ztree/js/jquery.ztree.excheck.js"></script>*@
+    <script src="~/Scripts/ztree/js/jquery.ztree.core.js"></script>
+    <script src="~/Scripts/ztree/js/jquery.ztree.exedit.js"></script>
+    <script src="~/Scripts/ztree/js/jquery.ztree.excheck.js"></script>
 </head>
 <body class="body-content">
     <section id="container">
