ztree默认选中 的bug调整(必须先判断时候有数据被选中)  以及前端调用Tree内方法  方便控制数据的展示与否

--- a/Pro.Web/Views/Angular/AngularList.cshtml
+++ b/Pro.Web/Views/Angular/AngularList.cshtml
@@ -270,6 +270,11 @@
             });
         }
 
+        function bindSelectData(data) {
+            alert("11");
+            console.log(data);
+        }
+
     </script>
 
     <script type="text/javascript">
